# morfUpdate

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  ROADMAP.md
.github/ISSUE_TEMPLATE/: amélioration-de-la-documentation.md  demande-de-fonctionnalité-.md  question.md  rapport-de-bug.md
docs/en/: README.md
docs/fr/: ARCHITECTURE.md  INTEGRATION.md  README.md
examples/minimal/: CMakeLists.txt  main.cpp
examples/widget/: CMakeLists.txt  main.cpp
include/morfupdate/: GitHubReleaseSource.h  IUpdateSource.h  ReleaseInfo.h  UpdateChecker.h  UpdateDialog.h  Version.h  morfUpdateConfig.h
src/: GitHubReleaseSource.cpp  UpdateChecker.cpp  UpdateDialog.cpp  Version.cpp
